# alura-flask-game-list

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml  requirements.txt
src/: app.py  config.py  constants.py  game.py  main.py
src/apis/: views.py
src/misc/: prepare_db.py
src/models/: __init__.py  game.py  user.py
src/services/: __init__.py  auth.py  game.py  image.py  route.py  user.py
src/static/: app.js
src/templates/: base.html  edit_game.html  game_list.html  index.html  login.html  new_game.html
src/views/: __init__.py  base.py  game.py  user.py
